--- a/src/components/HomeImage.module.css
+++ b/src/components/HomeImage.module.css
@@ -29,3 +29,8 @@
 .text:hover {
   transform: scale(1.1);
 }
+
+.exploreLink {
+  color: black; /* Or any color your text should be */
+  text-decoration: none; /* Removes underline from links */
+}
