--- a/src/components/ImageSection.module.css
+++ b/src/components/ImageSection.module.css
@@ -3,24 +3,11 @@
     text-align: center;
   }
   
-
-  .container::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(255, 255, 255, 0.7); 
-    mix-blend-mode: luminosity;
-  }
-
   .image {
     width: 100%; 
     height: 300px; 
     object-fit: cover; 
     display: block;
-    filter: grayscale(80%);
   }
   
   
@@ -29,7 +16,8 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: black;
+    color: white;
+    opacity: 50%;
     font-weight: bold;
     font-size: 32px;
   }
