--- a/src/components/navbar.module.css
+++ b/src/components/navbar.module.css
@@ -11,13 +11,19 @@
   }
   
   .logo {
-    margin-left: 20px; 
+    margin-left: 20px;
   }
-  
   
   .links a {
     margin-right: 20px;
     text-decoration: none;
     color: #333;
+    font-weight: bold;
+    opacity: 90%;
+    transition: transform 0.3s ease;
+    display: inline-block; /* Allow transformation */
   }
   
+  .links a:hover {
+    transform: scale(1.1);
+  }
