--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,9 +8,12 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
-  overflow: hidden; 
 }
 
+.noScroll {
+  overflow: hidden;
+  height: 100vh;
+}
 
 :root {
   --foreground-rgb: 0, 0, 0;
