--- a/src/components/This-semester.module.css
+++ b/src/components/This-semester.module.css
@@ -48,7 +48,7 @@
 
 .projectsTitle {
   text-align: center;
-  color: black;
+  color: rgb(180, 3, 10);
   margin: 20px 0;
   font-weight: bold;
   font-size: 28px;
