--- a/src/components/This-semester.module.css
+++ b/src/components/This-semester.module.css
@@ -1,12 +1,12 @@
 /* styles/ThisSemester.module.css */
+
 .mainContent {
-  min-height: calc(100vh - [NavbarHeight]); /* Replace [NavbarHeight] with the actual height of your Navbar */
-  /* Other styling as needed */
+  min-height: 100vh; /* Ensure main content covers at least the viewport height */
 }
 
 .semesterSection {
   text-align: center;
-  margin: 40px 0; 
+  margin: 40px 0;
 }
 
 .sectionTitle {
@@ -23,7 +23,7 @@
 }
 
 .card {
-  background-color: rgb(177, 177, 177); /* Gray background for first section */
+  background-color: rgb(177, 177, 177);
   width: 200px;
   height: 250px;
   display: flex;
@@ -47,7 +47,7 @@
   background-color: black;
   color: white;
   position: relative;
-  padding-bottom: 40px; 
+  padding-bottom: 40px; /* Additional padding at the bottom */
 }
 
 .projectsTitle {
@@ -71,12 +71,13 @@
   text-align: left;
   margin: 40px 0;
   background-color: white;
-  padding: 0 20px; 
+  padding: 0 20px;
+  padding-bottom: 40px; /* Increase padding at the bottom */
 }
 
 .aboutMeContent {
-  max-width: 800px; 
-  margin: auto; 
+  max-width: 800px;
+  margin: auto;
 }
 
 .aboutMeTitle {
@@ -90,7 +91,6 @@
   color: black;
   font-size: 20px;
   margin-bottom: 20px;
-  padding-bottom: 30px;
 }
 
 .aboutMeLink {
