--- a/src/components/This-semester.module.css
+++ b/src/components/This-semester.module.css
@@ -1,7 +1,7 @@
 /* styles/ThisSemester.module.css */
 
 .mainContent {
-  min-height: 100vh; /* Ensure main content covers at least the viewport height */
+  min-height: calc(100vh - [NavbarHeight]);
 }
 
 .semesterSection {
@@ -47,7 +47,7 @@
   background-color: black;
   color: white;
   position: relative;
-  padding-bottom: 40px; /* Additional padding at the bottom */
+  padding-bottom: 40px;
 }
 
 .projectsTitle {
