--- a/src/components/This-semester.module.css
+++ b/src/components/This-semester.module.css
@@ -1,21 +1,10 @@
 .mainContent {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
+  min-height: calc(100vh - [NavbarHeight]);
 }
 
 .semesterSection {
   text-align: center;
-  flex: 1;
-  margin: 40px 0;
-}
-
-.section {
-  flex-grow: 1;
-}
-
-.footer {
-  height: 150px; /* Adjust as needed */
+  margin: 40px 0; 
 }
 
 .sectionTitle {
@@ -32,7 +21,7 @@
 }
 
 .card {
-  background-color: rgb(177, 177, 177);
+  background-color: rgb(177, 177, 177); /* Gray background for first section */
   width: 200px;
   height: 250px;
   display: flex;
@@ -56,8 +45,7 @@
   background-color: black;
   color: white;
   position: relative;
-  padding-bottom: 40px;
-  flex: 1;
+  padding-bottom: 40px; 
 }
 
 .projectsTitle {
@@ -81,13 +69,12 @@
   text-align: left;
   margin: 40px 0;
   background-color: white;
-  padding: 0 20px;
-  padding-bottom: 40px; /* Increase padding at the bottom */
+  padding: 0 20px; /* Adjust padding as needed */
 }
 
 .aboutMeContent {
-  max-width: 800px;
-  margin: auto;
+  max-width: 800px; /* Adjust max-width as needed */
+  margin: auto; /* Center the content */
 }
 
 .aboutMeTitle {
@@ -101,6 +88,7 @@
   color: black;
   font-size: 20px;
   margin-bottom: 20px;
+  padding-bottom: 30px;
 }
 
 .aboutMeLink {
