--- a/src/components/navbar.module.css
+++ b/src/components/navbar.module.css
@@ -18,10 +18,9 @@
     margin-right: 20px;
     text-decoration: none;
     color: #333;
-    font-weight: bold;
     opacity: 90%;
     transition: transform 0.3s ease;
-    display: inline-block; /* Allow transformation */
+    display: inline-block; 
   }
   
   .links a:hover {
