--- a/src/components/Learning-outcomes.module.css
+++ b/src/components/Learning-outcomes.module.css
@@ -71,6 +71,7 @@
     font-size: 2em;
     margin-bottom: 20px;
     color: #1b1b1b;
+    font-family: 'Media Sans', sans-serif;
   }
   
   .toProjectsButton {
