--- a/src/components/ImageSection.module.css
+++ b/src/components/ImageSection.module.css
@@ -23,18 +23,19 @@
 }
 
 .backButton {
-  position: absolute;
-  top: 10px;
+  position: fixed;
   left: 10px;
+  margin-top: 10px;
   padding: 5px 15px;
   font-size: 1em; 
-  border: 2px solid #fff;
+  border: 2px solid #000000;
   border-radius: 20px;
   background: none;
-  color: #fff;
+  color: #b83a3a;
   cursor: pointer;
   outline: none;
   transition: background-color 0.3s, color 0.3s;
+  z-index: 1000; 
 }
 
 .backButton:hover {
